ARM32: ShouldNotReachHere assertion on Test8168712 jtreg test

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b24
    • arm
    • linux

        # after -XX: or in .hotspotrc: SuppressErrorAt=/sharedRuntime_arm.cpp:590
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/build/jdk-jdk/src/hotspot/cpu/arm/sharedRuntime_arm.cpp:590), pid=3666, tid=3674
        # Error: ShouldNotReachHere()

              Assignee:
              Boris Ulasevich
              Reporter:
              Boris Ulasevich
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: