8207584: ARM32: ShouldNotReachHere assertion on Test8168712 jtreg test

Reviewed-by: shade